// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`install check reqs 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/install",
      },
    ],
    Array [
      Object {
        "ignoreError": true,
        "method": "get",
        "url": "../admin-api/install",
      },
    ],
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/install",
      },
    ],
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/install",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`install install 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "method": "get",
        "url": "/admin-api/install",
      },
    ],
    Array [
      Object {
        "ignoreError": true,
        "method": "get",
        "url": "../admin-api/install",
      },
    ],
    Array [
      Object {
        "data": Object {
          "agree": true,
          "dbDbName": "miaoxing",
          "dbHost": "localhost",
          "dbPassword": "password",
          "dbTablePrefix": "mx_",
          "dbUser": "root",
          "password": "123456",
          "requestDefaultUrlRewrite": true,
          "seed": true,
          "username": "admin",
        },
        "loading": true,
        "method": "post",
        "url": "/admin-api/install",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
